--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -399,3 +399,13 @@
   font-size: $type-size-6;
   text-transform: uppercase;
 }
+
+.middot-divider {
+  padding-right: .45em;
+  padding-left: .45em;
+  font-size: 15px
+}
+
+.middot-divider::after {
+  content: '\00B7'
+}
